[package]
name = "strfile"
version = "0.1.2"
authors = ["Kirill Borisov <borisov.kir@gmail.com>"]
license = "MIT"
keywords = ["strfile", "fortune"]
readme = "README.md"
homepage = "https://github.com/lensvol/strfile-rs"
description = "Tiny package to read strfile headers."

[lib]
name = "strfile"
path = "lib.rs"

[dependencies]
byteorder = "0.3.1.3"
